Implement toggle for python support.
Python installs are handled differently here. Instead of having each case install its own python files, instead they now add their required files to an overall list of python files to install. At install time, all the files in each list are copied into the install directory. This is much more clear and maintainable than the previous system.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
+# Paths
 set(PYTHON_PACKAGE_DIR "Python")
 set(CSHARP_DIR "CSharp")
 set(C_INTERFACE_DIR "Cinterface")
@@ -7,12 +8,10 @@ set(C_PACKAGE_DIR "Cpp")
 set(C_TEST_DRIVER_DIR "Cpp/tests/src")
 set(DEPENDENCY_BINARIES "${CMAKE_SOURCE_DIR}/external/Embree/bin/tbb.dll" "${CMAKE_SOURCE_DIR}/external/Embree/bin/embree3.dll")
 
-
-project ("humanfactors"
-	VERSION "0.0.1")
-
-# HumanFactors_Configure Variables
+project ("humanfactors" VERSION "0.0.1")
 set(project_name "HumanFactors")
+
+# Configuration options
 set_property(
 	CACHE HumanFactors_Config PROPERTY
 	STRINGS 
@@ -22,62 +21,28 @@ set_property(
 		StandaloneVisibilityGraph
 		StandaloneViewAnalysis
 )
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "/EHsc /MP")
 option(HumanFactors_EnableTests "Install unit tests to the bin directory" ON)
+option(HumanFactors_EnableCSharp "Include C# Interface" ON)
+option(HumanFactors_EnablePython "Include Python Interface" ON)
 set(HumanFactors_Config "StandaloneGraphGenerator" CACHE STRING "What projects to build")
 set(EXTERNAL_DIR "${CMAKE_SOURCE_DIR}\\external")
 set (ENABLE_EXPORTS ON)
 
 add_subdirectory(${CSHARP_DIR})
+
+# Change install directory based on which options were selected
 set(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/${HumanFactors_Config}")
+
 # Setup
 add_library(HumanFactors SHARED)
 
-# Add some global packages to the list
-target_include_directories(
-	HumanFactors
-	PRIVATE
-		${C_INTERFACE_DIR}
-	    ${CMAKE_CURRENT_LIST_DIR}
-)
+# These files are always needed
+target_include_directories(	HumanFactors PRIVATE ${C_INTERFACE_DIR}  ${CMAKE_CURRENT_LIST_DIR})
 add_subdirectory(${C_PACKAGE_DIR}/exceptions)
 add_subdirectory(external)
-install(
-	FILES
-		${PYTHON_PACKAGE_DIR}/humanfactorspy/common_native_functions.py
-		${PYTHON_PACKAGE_DIR}/humanfactorspy/Exceptions.py
-		${PYTHON_PACKAGE_DIR}/humanfactorspy/native_numpy_like.py
-		${PYTHON_PACKAGE_DIR}/humanfactorspy/__init__.py
-	DESTINATION humanfactorspy
-)
-install(DIRECTORY 
-			"${PYTHON_PACKAGE_DIR}/humanfactorspy/Example Models" 
-			"${PYTHON_PACKAGE_DIR}/humanfactorspy/Examples" 
-			
-		DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(
-	FILES
-		${PYTHON_PACKAGE_DIR}/README.md
-		${PYTHON_PACKAGE_DIR}/setup.py
-	DESTINATION
-		${CMAKE_INSTALL_PREFIX}
-)
-
-install(
-	FILES ${DEPENDENCY_BINARIES} DESTINATION humanfactorspy/bin
-)
-# /$$$$$$                       /$$$$$$  /$$                                          /$$     /$$                    
-# /$$__  $$                     /$$__  $$|__/                                         | $$    |__/                    
-#| $$  \__/  /$$$$$$  /$$$$$$$ | $$  \__/ /$$  /$$$$$$  /$$   /$$  /$$$$$$  /$$$$$$  /$$$$$$   /$$  /$$$$$$  /$$$$$$$ 
-#| $$       /$$__  $$| $$__  $$| $$$$    | $$ /$$__  $$| $$  | $$ /$$__  $$|____  $$|_  $$_/  | $$ /$$__  $$| $$__  $$
-#| $$      | $$  \ $$| $$  \ $$| $$_/    | $$| $$  \ $$| $$  | $$| $$  \__/ /$$$$$$$  | $$    | $$| $$  \ $$| $$  \ $$
-#| $$    $$| $$  | $$| $$  | $$| $$      | $$| $$  | $$| $$  | $$| $$      /$$__  $$  | $$ /$$| $$| $$  | $$| $$  | $$
-#|  $$$$$$/|  $$$$$$/| $$  | $$| $$      | $$|  $$$$$$$|  $$$$$$/| $$     |  $$$$$$$  |  $$$$/| $$|  $$$$$$/| $$  | $$
-# \______/  \______/ |__/  |__/|__/      |__/ \____  $$ \______/ |__/      \_______/   \___/  |__/ \______/ |__/  |__/
-#                                             /$$  \ $$                                                               
-#                                            |  $$$$$$/                                                               
-#                                             \______/                                                                
 
 # Set Compiler flags based on whether or not this is the release build
 if(CMAKE_BUILD_TYPE MATCHES Release)
@@ -92,6 +57,36 @@ else()
 			"/openmp /EHsc /MP"
 	)
 endif()
+
+
+# /$$$$$$                       /$$$$$$  /$$                                          /$$     /$$                    
+# /$$__  $$                     /$$__  $$|__/                                         | $$    |__/                    
+#| $$  \__/  /$$$$$$  /$$$$$$$ | $$  \__/ /$$  /$$$$$$  /$$   /$$  /$$$$$$  /$$$$$$  /$$$$$$   /$$  /$$$$$$  /$$$$$$$ 
+#| $$       /$$__  $$| $$__  $$| $$$$    | $$ /$$__  $$| $$  | $$ /$$__  $$|____  $$|_  $$_/  | $$ /$$__  $$| $$__  $$
+#| $$      | $$  \ $$| $$  \ $$| $$_/    | $$| $$  \ $$| $$  | $$| $$  \__/ /$$$$$$$  | $$    | $$| $$  \ $$| $$  \ $$
+#| $$    $$| $$  | $$| $$  | $$| $$      | $$| $$  | $$| $$  | $$| $$      /$$__  $$  | $$ /$$| $$| $$  | $$| $$  | $$
+#|  $$$$$$/|  $$$$$$/| $$  | $$| $$      | $$|  $$$$$$$|  $$$$$$/| $$     |  $$$$$$$  |  $$$$/| $$|  $$$$$$/| $$  | $$
+# \______/  \______/ |__/  |__/|__/      |__/ \____  $$ \______/ |__/      \_______/   \___/  |__/ \______/ |__/  |__/
+#                                             /$$  \ $$                                                               
+#                                            |  $$$$$$/                                                               
+#                                             \______/                                                                
+
+# These are lists of the files that need to be installed based configuration
+set(PYTHON_MODULES  #Folders in the python directory that need to be copied over
+		"${PYTHON_PACKAGE_DIR}/humanfactorspy/Example Models" 
+		"${PYTHON_PACKAGE_DIR}/humanfactorspy/Examples" 
+)
+
+set(PYTHON_FILES # Files to be placed in the python root directory
+		${PYTHON_PACKAGE_DIR}/humanfactorspy/common_native_functions.py
+		${PYTHON_PACKAGE_DIR}/humanfactorspy/Exceptions.py
+		${PYTHON_PACKAGE_DIR}/humanfactorspy/native_numpy_like.py
+		${PYTHON_PACKAGE_DIR}/humanfactorspy/__init__.py
+
+)
+set(ROOT_FILES # Files to be placed in the root of the project
+		${PYTHON_PACKAGE_DIR}/README.md
+)
 
 # Change linked targets based on HumanFactors_Config
 message([STATUS] ${HumanFactors_Config} " Selected as the current HumanFactors_Configuration")
@@ -132,8 +127,7 @@ if(${HumanFactors_Config} STREQUAL "All")
 			${C_INTERFACE_DIR}/pathfinder_C.cpp
 			${C_INTERFACE_DIR}/pathfinder_C.h
 	)
-	install( 
-		DIRECTORY 
+	LIST (APPEND PYTHON_MODULES
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer	
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
@@ -141,7 +135,6 @@ if(${HumanFactors_Config} STREQUAL "All")
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/visibilitygraph
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/pathfinding
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/graphgenerator
-			DESTINATION humanfactorspy
 	)
 
 elseif(${HumanFactors_Config} STREQUAL "StandaloneRayTracer")
@@ -165,11 +158,9 @@ elseif(${HumanFactors_Config} STREQUAL "StandaloneRayTracer")
 			${C_INTERFACE_DIR}/cinterface_utils.h
 			${C_INTERFACE_DIR}/cinterface_utils.cpp
 	)
-	install(
-		DIRECTORY
+	LIST (APPEND PYTHON_MODULES
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer
-		DESTINATION humanfactorspy
 	)
 
 elseif(${HumanFactors_Config} STREQUAL "StandaloneGraphGenerator")
@@ -199,13 +190,11 @@ elseif(${HumanFactors_Config} STREQUAL "StandaloneGraphGenerator")
 			${C_INTERFACE_DIR}/spatialstructures_C.h
 			${C_INTERFACE_DIR}/spatialstructures_C.cpp
 	)
-	install(
-		DIRECTORY
+	LIST(APPEND PYTHON_MODULES
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
 			${PYTHON_PACKAGE_DIR}/humanfactorspy/graphgenerator
-		DESTINATION humanfactorspy
 	)
 
 	elseif(${HumanFactors_Config} STREQUAL "StandaloneVisibilityGraph")
@@ -237,13 +226,11 @@ elseif(${HumanFactors_Config} STREQUAL "StandaloneGraphGenerator")
 				${C_INTERFACE_DIR}/visibility_graph_C.cpp
 				${C_INTERFACE_DIR}/visibility_graph_C.h
 		)
-		install(
-			DIRECTORY
+		LIST(APPEND PYTHON_MODULES
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/visibilitygraph
-			DESTINATION humanfactorspy
 		)
 	
 	elseif(${HumanFactors_Config} STREQUAL "StandaloneViewAnalysis")
@@ -275,19 +262,19 @@ elseif(${HumanFactors_Config} STREQUAL "StandaloneGraphGenerator")
 				${C_INTERFACE_DIR}/view_analysis_C.cpp
 				${C_INTERFACE_DIR}/view_analysis_C.h
 		)
-		install(
-			DIRECTORY
+		LIST(APPEND 
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/viewanalysis
-			DESTINATION humanfactorspy
 		)
+
 	elseif(${HumanFactors_Config} STREQUAL "StandaloneViewAnalysis")
 	
 else()
 	message(FATAL_ERROR "That is not a valid configuration ${HumanFactors_Config}")
 endif()
+
 
 # /$$$$$$$$                   /$$             
 #|__  $$__/                  | $$             
@@ -475,21 +462,30 @@ endif()
 # /$$$$$$| $$  | $$ /$$$$$$$/ |  $$$$/  $$$$$$$| $$| $$
 #|______/|__/  |__/|_______/   \___/  \_______/|__/|__/
 
+# Install python if the option is set to true
+if(HumanFactors_EnablePython)
+	message("Installing Python!")
+	install(DIRECTORY ${PYTHON_MODULES} DESTINATION humanfactorspy)
+	install(FILES ${PYTHON_FILES} DESTINATION humanfactorspy)
+	install(FILES ${DEPENDENCY_BINARIES} DESTINATION humanfactorspy/bin)
+	LIST(APPEND ROOT_FILES ${PYTHON_PACKAGE_DIR}/setup.py)
+endif()
+
 install(TARGETS ${project_name}
 		EXPORT ${project_name}Targets
 		LIBRARY DESTINATION lib
 		ARCHIVE DESTINATION lib
-		RUNTIME DESTINATION humanfactorspy/bin
+		RUNTIME DESTINATION bin
 		INCLUDES DESTINATION include
 	)
 install(EXPORT ${project_name}Targets
-		FILE
-			${project_name}Targets.cmake
-#		NAMESPACE
-#			${project_name}::
-		DESTINATION
-			lib/cmake/${project_name}
-		)
+	FILE
+		${project_name}Targets.cmake
+#	NAMESPACE
+#		${project_name}::
+	DESTINATION
+		lib/cmake/${project_name}
+)
 
 # Copy over human factors dlls for the C# build
 include(CMakePackageConfigHelpers)
@@ -518,4 +514,5 @@ install(FILES
 		TYPE BIN
 	)
 
+install(FILES ${ROOT_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX})
 #add_library(${project_name}::${project_name} ALIAS ${project_name})
