Add VisibilityGraph config

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,8 @@ set_property(
 		GraphGenerator
 		VisibilityGraph
 		ViewAnalysis
+		VisibilityGraph
+		Pathfinder
 )
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "/EHsc /MP")
@@ -279,6 +281,41 @@ elseif(${HumanFactors_Config} STREQUAL "GraphGenerator")
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
 				${PYTHON_PACKAGE_DIR}/humanfactorspy/viewanalysis
 		)
+	elseif(${HumanFactors_Config} STREQUAL "VisibilityGraph")
+		message([STATUS] "Building Visibilitygraph")
+		add_subdirectory(${C_PACKAGE_DIR}/raytracer)
+		add_subdirectory(${C_PACKAGE_DIR}/objloader)
+		add_subdirectory(${C_PACKAGE_DIR}/analysismethods)
+		add_subdirectory(${C_PACKAGE_DIR}/spatialstructures)
+
+		target_link_libraries(
+			HumanFactors 
+			PRIVATE
+				EmbreeRayTracer
+				OBJLoader
+				SpatialStructures
+				VisibilityGraph
+		)
+		target_sources(
+			HumanFactors
+			PRIVATE
+				${C_INTERFACE_DIR}/objloader_C.cpp
+				${C_INTERFACE_DIR}/objloader_C.h
+				${C_INTERFACE_DIR}/raytracer_C.cpp
+				${C_INTERFACE_DIR}/raytracer_C.h
+				${C_INTERFACE_DIR}/cinterface_utils.h
+				${C_INTERFACE_DIR}/cinterface_utils.cpp
+				${C_INTERFACE_DIR}/spatialstructures_C.h
+				${C_INTERFACE_DIR}/spatialstructures_C.cpp
+				${C_INTERFACE_DIR}/visibility_graph_C.h
+				${C_INTERFACE_DIR}/visibility_graph_C.cpp
+		)
+		LIST(APPEND 
+				${PYTHON_PACKAGE_DIR}/humanfactorspy/geometry
+				${PYTHON_PACKAGE_DIR}/humanfactorspy/raytracer
+				${PYTHON_PACKAGE_DIR}/humanfactorspy/spatialstructures
+				${PYTHON_PACKAGE_DIR}/humanfactorspy/VisibilityGraph
+		)
 
 	elseif(${HumanFactors_Config} STREQUAL "ViewAnalysis")
 	
@@ -436,12 +473,28 @@ if(HumanFactors_EnableTests)
 				${C_TEST_DRIVER_DIR}/SpatialStructures.cpp
 				${C_TEST_DRIVER_DIR}/ViewAnalysis.cpp
 		)
-
+	elseif(${HumanFactors_Config} STREQUAL "VisibilityGraph")
+		target_link_libraries(
+			HFUnitTests
+			PRIVATE
+				gtest_main
+				OBJLoader
+				HFExceptions
+				EmbreeRayTracer
+				SpatialStructures
+				VisibilityGraph
+		)
+		target_sources(
+			HFUnitTests
+			PRIVATE
+				${C_TEST_DRIVER_DIR}/embree_raytracer.cpp
+				${C_TEST_DRIVER_DIR}/OBJLoader.cpp
+				${C_TEST_DRIVER_DIR}/SpatialStructures.cpp
+				${C_TEST_DRIVER_DIR}/VisibilityGraph.cpp
+		)
 	endif()
 	# add_test(NAME FirstTest COMMAND HFUnitTests)
-	gtest_discover_tests(HFUnitTests 
-		WORKING_DIRECTORY $<TARGET_FILE_DIR:HFUnitTests>
-	)
+	gtest_discover_tests(HFUnitTests WORKING_DIRECTORY $<TARGET_FILE_DIR:HFUnitTests>)
 	install(
 		TARGETS HFUnitTests
 		LIBRARY DESTINATION lib
@@ -449,7 +502,6 @@ if(HumanFactors_EnableTests)
 		RUNTIME DESTINATION bin
 		INCLUDES DESTINATION includes
 	)
-
 	add_custom_command(
 		TARGET HFUnitTests PRE_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy 
